compiler/testData/loadJava/kotlinSignature/error/ConflictingProjectionKind.kt
package test

public open class ConflictingProjectionKind : Object() {
    public open fun foo(p0: List<Number>?) {
        throw UnsupportedOperationException()
    }
}
